tidying up code / adding comments

--- a/css/chatterbox.css
+++ b/css/chatterbox.css
@@ -1,68 +1,68 @@
 body {
-	margin: 100px;
-	background-color:#000;
-	color: #007cef;	
-	font-family: 'Muli', sans-serif;
+	margin:100px;
+	background-color:#000000;
+	color:#007cef;	
+	font-family:'Muli', sans-serif;
 }
 
 header {
 	width:100%;
 	padding-top:40px;
-	overflow: hidden;
-	background-image: url(../images/chatterbox_logo.gif);
-	background-repeat: no-repeat;
-	height: 0px;
+	overflow:hidden;
+	background-image:url(../images/chatterbox_logo.gif);
+	background-repeat:no-repeat;
+	height:0px;
 }
 
 h2 {
-	color: #7750cb;
+	color:#7750cb;
 }
 
 #pagewrapper {
-	width: 600px;
-	margin: 0 auto;
+	width:600px;
+	margin:0 auto;
 }
 
 /* Main Site Navigation */
+
 nav {
-	font-family: 'Muli', sans-serif;
-	font-size: 14pt;
-	color: #7750cb;
+	font-family:'Muli', sans-serif;
+	font-size:14pt;
+	color:#7750cb;
 }
 
 ul li {
-	margin: 0;
-	padding: 0;
+	margin:0;
+	padding:0;
 }
 
 menu {
-	width: 600px;
-	padding: 10px;
-	background-color: #465d79;
+	width:600px;
+	padding:10px;
+	background-color:#465d79;
 	border:1px solid #c4e8ff;
 }
 
 menu ul {
-	list-style: none;
+	list-style:none;
 }
 
 menu li {
-	display: inline;
-	left: -50px;
+	display:inline;
 }
 
-a:link,
+a:link
 a:visited {
-	padding-right: 10px;
-	color: #c4e8ff;
-	text-decoration: none;
+	padding-right:10px;
+	color:#c4e8ff;
+	text-decoration:none;
 }
 
-a:hover,
+a:hover
 a:active {
-	padding-right: 10px;
-	color: #64a2ea;
-	text-decoration: none;
+	padding-right:10px;
+	color:#64a2ea;
+	text-decoration:none;
 }
 
 /* Text */
@@ -77,36 +77,34 @@ a:active {
 }
 
 #time {
-	color: #6e8097;
-	font-size: 70%;
-	font-style: italic;
+	color:#6e8097;
+	font-size:70%;
+	font-style:italic;
 }
 
-/* Form Content */
+/* Content Boxes */
 
 .formcontent {
-	width: 600px;
-	padding: 20px;
-	background-color: #c4e8ff;
-	background-image: url(../images/CB_logo.gif);
-	background-repeat: no-repeat;
+	width:580px;
+	padding:20px;
+	background-color:#c4e8ff;
+	background-image:url(../images/CB_logo.gif);
+	background-repeat:no-repeat;
 	background-position:right;
 	
 	
 }
 
-/* Content */
-
 .content {
-	width: 600px;
-	padding: 20px;
-	background-color: #c4e8ff;
+	width:580px;
+	padding:20px;
+	background-color:#c4e8ff;
 }
 
 .content a {
-	color: #479cd1;
+	color:#479cd1;
 }
 
 .content a:hover {
-	color: #007cef
+	color:#007cef;
 }
